[package]
name = "nacelle-cli"
description = "nacelle is the heart of the `zerocore` serverless engine. It is concerned with setting up the webassembly runtime, providing necessary host functionalities to get it running properly."
keywords = []
categories = []
documentation = "https://docs.rs/nacelle-cli"
version.workspace = true
repository.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "nacelle"
path = "bin/nacelle.rs"

[dependencies]
clap.workspace = true
nacelle.workspace = true
thiserror.workspace = true
