[package]
name = "nacelle-wasi"
description = "WASI preview 2 implementation for Nacelle"
keywords = []
categories = []
documentation = "https://docs.rs/nacelle-wasi"
version.workspace = true
repository.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
bitflags.workspace = true
tracing.workspace = true
wasmtime.workspace = true
zerofs.workspace = true
zeroutils-store.workspace = true
zeroutils-wasi.workspace = true

[features]
default = []
